--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
     /* display: inline-block;
     cursor: pointer;
     align-items: flex-end; */
-    margin: 0px 15px
+    margin: 0px 25px
 }
   
 .bar1, .bar2, .bar3 {
@@ -99,16 +99,27 @@
 
 .program-dancer-list-item{
     align-items: center;
-    width: 48%;
+    width: 47%;
     margin: 1%;
+    border: solid 1px rgb(0,0,0,0.1);
+    border-radius: 10px;
 }
 
 .dancer-img{
     width: 100%;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .dancer-name{
     font-weight: 600;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+.dancer-skill{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    opacity: 0.4;
 }
