--- a/index.css
+++ b/index.css
@@ -1,4 +1,9 @@
 @import url(./reset.css);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap");
+
+html{
+    font-family: 'Open Sans', sans-serif;
+}
 
 .nav-bar{
     height: 60px;
@@ -10,6 +15,7 @@
 .logo{
     align-items: center;
     height: 60px;
+    margin-top: 15px;
 }
 
 .logo-img{
@@ -61,7 +67,7 @@
 .welcom-ment{
     font-size: 50px;
     margin: 20px 0px;
-    font-weight: 800;
+    font-weight: 700;
     text-align: center;
 }
 
@@ -87,7 +93,7 @@
 .program-dancer{
     margin: 10px;
     font-size: 25px;
-    font-weight: 800;
+    font-weight: 700;
     line-height: 40px;
     width: 80%;
 }
