--- a/index.css
+++ b/index.css
@@ -111,6 +111,11 @@ html{
     border-radius: 10px;
 }
 
+.imgarea{
+    width: 100%;
+    height: width;
+    overflow: auto;
+}
 .dancer-img{
     width: 100%;
     border-radius: 10px 10px 0px 0px;
@@ -123,9 +128,17 @@ html{
     margin-left: 10px;
 }
 
+.dancer-info{
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+    opacity: 0.4;
+    font-size: 13px;
+}
+
 .dancer-skill{
-    margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
     opacity: 0.4;
+    font-size: 13px;
 }
