--- a/media_List.css
+++ b/media_List.css
@@ -142,4 +142,23 @@ html{
     padding: 2px 6px 2px 6px;
     display: inline;
     border-radius: 3px;
+    font-weight: 700;
+}
+
+.Time-Content{
+    background-color: #ffc48c;
+    font-size: 13px;
+    padding: 2px 6px 2px 6px;
+    display: inline;
+    border-radius: 3px;
+    font-weight: 700;
+}
+
+.New-Content{
+    background-color: #99dbaa;
+    font-size: 13px;
+    padding: 2px 6px 2px 6px;
+    display: inline;
+    border-radius: 3px;
+    font-weight: 700;
 }
